@@ -1,6 +1,9 @@
 #! /bin/sh
 # Originally from Steve Robbins, with small modications by Bert Vincent.
 #
+
+set -e
+
 if [ ! -r m4/mni_REQUIRE_LIB.m4 ]; then
     cat <<EOF
 The required m4 files were not found.
@@ -24,6 +27,8 @@ Any other diagnostics may be a sign of trouble.
 
 Let me (bert@bic.mni.mcgill.ca) know if something goes wrong!
 EOF
+
+test -d ac_config_aux || mkdir ac_config_aux
 
 aclocal -I m4
 autoheader
